# fs_monitor

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: main.cpp  utils.hpp
src/collector/: collector.hpp  slot.hpp
src/logger/: logger.hpp
src/monitor/: dir_mon.hpp  event.hpp  ievent.hpp  inotify.hpp  monitor.hpp
